--- a/Configuration/NodeTypes.Mixin.PageConfiguration.yaml
+++ b/Configuration/NodeTypes.Mixin.PageConfiguration.yaml
@@ -1,7 +1,7 @@
 'CodeQ.JumpMarkers:Mixin.PageConfiguration':
   abstract: true
   properties:
-    heroHashMenu:
+    jumpMarkersEnabled:
       type: boolean
       defaultValue: false
       ui:
