FEATURE: Allow syncing the section id with the jump marker title
Resolves: #1

--- a/Resources/Private/JavaScript/AnchorView/package.json
+++ b/Resources/Private/JavaScript/AnchorView/package.json
@@ -9,5 +9,9 @@
     },
     "neos": {
         "buildTargetDirectory": "../../../Public/JavaScript/AnchorView"
+    },
+    "dependencies": {
+        "@sindresorhus/slugify": "^2.1.0",
+        "lodash.unescape": "^4.0.1"
     }
 }
