--- a/Configuration/NodeTypes.Mixin.SectionConfiguration.yaml
+++ b/Configuration/NodeTypes.Mixin.SectionConfiguration.yaml
@@ -31,7 +31,9 @@
         label: i18n
         inspector:
           group: jumpmarker
+          editor: 'CodeQ.JumpMarkers/Inspector/Editors/SegmentIdEditor'
           editorOptions:
+            sectionId: "ClientEval:node.properties.jumpMarkerTitle"
             # Implements the most common subset of CodeQ.JumpMarkers:Integration.Helper.NodeAnchorId,
             # fully implementing Carbon.String.urlize(value) would bloat the code too much
             placeholder: "ClientEval: (node.properties.jumpMarkerTitle || '').replace('&nbsp;', '-').replace(/<[^>]*>/g, ' ').substr(0, 100).trim().toLowerCase().replaceAll('ä', 'ae').replaceAll('ü', 'ue').replaceAll('ö', 'oe').replaceAll('ß', 'ss').replace(/[^A-Za-z0-9\/]+/g, '-').trim().replace(/^.*?([a-z].*)$/, /*remove non-alpha chars from start*/ '$1').replace(/(.*)-$/, /*remove dashes from end*/ '$1')"
