CHORE: Update neos/neos version constraint

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "GPL-3.0-or-later",
     "require": {
         "ext-json": "*",
-        "neos/neos": "^4.3 || ^5.0 || ^7.0 || dev-master",
+        "neos/neos": "^4.3 || ^5.0 || ^7.0 || ^8.0 || dev-master",
         "carbon/eel": "^1.0 || ^2.0 "
     },
     "autoload": {
