--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
     "name": "codeq/jumpmarkers",
-    "description": "",
+    "description": "Link content nodes as anchors and rendering a anchor navigation.",
     "type": "neos-package",
     "license": "GPL-3.0-or-later",
     "require": {
         "ext-json": "*",
-        "neos/neos": "^4.3 || ^5.0 || ^7.0 || ^8.0 || dev-master",
-        "carbon/eel": "^1.0 || ^2.0 "
+        "neos/neos": "^7.0 || ^8.0 || dev-master",
+        "carbon/eel": "^1.0 || ^2.0"
     },
     "autoload": {
         "psr-4": {
