BUGFIX: PageConfiguration property fix #4

--- a/Configuration/NodeTypes.Mixin.PageConfiguration.yaml
+++ b/Configuration/NodeTypes.Mixin.PageConfiguration.yaml
@@ -1,7 +1,11 @@
+##
+# This is a utility type, include it for a configuration
+# if a jump marker navigation should be shown on the page.
+##
 'CodeQ.JumpMarkers:Mixin.PageConfiguration':
   abstract: true
   properties:
-    jumpMarkersEnabled:
+    showJumpMarkersMenu:
       type: boolean
       defaultValue: false
       ui:
