BUGFIX: #5 Show the buttons below the section id input

--- a/Configuration/NodeTypes.Mixin.SectionConfiguration.yaml
+++ b/Configuration/NodeTypes.Mixin.SectionConfiguration.yaml
@@ -11,6 +11,7 @@
         anchor:
           label: 'Anchor view'
           group: jumpmarker
+          position: 300
           view: 'CodeQ.JumpMarkers/Views/AnchorView'
   properties:
     jumpMarkerTitle:
