TASK: Reduce button sizes to fit on one line
- Fix inclusion of style.css.
- Add detailed button tooltips.
- Use native Neos UI icon component instead of custom SVGs and CSS
  styles to align with similar icon presentations.
- Set fixed icon width and height for all button states to prevent
  buttons from shrinking and enlarging.
- Buttons evenly consume all available space.

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -27,6 +27,9 @@ Neos:
         CodeQ.JumpMarkers/Views: 'resource://CodeQ.JumpMarkers/Public/JavaScript/Inspector/Views'
     Ui:
       resources:
+        stylesheets:
+          'CodeQ.JumpMarkers:AnchorView':
+            resource: resource://CodeQ.JumpMarkers/Public/JavaScript/AnchorView/Plugin.css
         javascript:
           'CodeQ.JumpMarkers:AnchorView':
             resource: resource://CodeQ.JumpMarkers/Public/JavaScript/AnchorView/Plugin.js
